# Moon_Light_Bot

./: .gitignore  README.md  bot.py  commands.py  config.py  main.py  pyproject.toml  update.sh
.github/workflows/: autodeploy.yml  main.yml  test.yml
